--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-          <img class="side-img" id="fl-right" src="3.png" alt="">
+          <img class="side-img" id="fl-right" src="f-1.jpg" alt="">
         </div>
         <div class="main__content">
           <h1>Introduction</h1>
