--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero" id="home" style="background: linear-gradient(to bottom, rgba(0,0,0,0), #151515), url('img/f-1.jpg')">
+    <div class="hero" id="home" style="background: linear-gradient(to bottom, rgba(0,0,0,0), #151515), url('f-1.jpg')">
       <div class="hero__container">
     <div class="intro">
         
@@ -45,7 +45,7 @@
 <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-          <img class="side-img" id="fl-right" src="f-1.jpg" alt="">
+          <img class="side-img" id="fl-right" src="3.png" alt="">
         </div>
         <div class="main__content">
           <h1>Introduction</h1>
